# flight-path-calculator

./: .gitignore  Makefile  README.md
cpp/: CMakeLists.txt  flight_path
cpp/include/: flight_path_calculator.h
cpp/src/: flight_path_calculator.cpp  main.cpp
cpp/tests/: test_flight_path.cpp
python/: example.json  pyproject.toml  requirements.txt
python/src/: __init__.py  cli.py  flight_path.py
python/tests/: test_flight_path.py
